- added offline browser and setup the ui sizing

--- a/derpibooruCSharpDownloader/derpibooruCSharpDownloader.csproj
+++ b/derpibooruCSharpDownloader/derpibooruCSharpDownloader.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>201506051704030_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="OfflineBrowser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadedDownloader\TDownloader.cs" />
