--- a/derpibooruCSharpDownloader/derpibooruCSharpDownloader.csproj
+++ b/derpibooruCSharpDownloader/derpibooruCSharpDownloader.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FunctionQueues, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FunctionQueues.1.0.0.3\lib\net45\FunctionQueues.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MoreLinq, Version=1.1.18418.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
       <HintPath>..\packages\morelinq.1.1.1\lib\net35\MoreLinq.dll</HintPath>
       <Private>True</Private>
