--- a/derpibooruCSharpDownloader/packages.config
+++ b/derpibooruCSharpDownloader/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="4.0.0-ci1057" targetFramework="net45" userInstalled="true" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="FunctionQueues" version="1.0.0.3" targetFramework="net45" userInstalled="true" />
   <package id="morelinq" version="1.1.1" targetFramework="net45" userInstalled="true" />
   <package id="NDepend.Path" version="1.0.0" targetFramework="net45" userInstalled="true" />
   <package id="Nito.AsyncEx" version="3.0.1-pre" targetFramework="net45" userInstalled="true" />
