--- a/derpibooruCSharpDownloader/derpibooruCSharpDownloader.csproj
+++ b/derpibooruCSharpDownloader/derpibooruCSharpDownloader.csproj
@@ -61,7 +61,9 @@
       <HintPath>..\packages\NDepend.Path.1.0.0\lib\net35\NDepend.Path.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>.\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Nito.AsyncEx, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Nito.AsyncEx.3.0.1-pre\lib\net45\Nito.AsyncEx.dll</HintPath>
       <Private>True</Private>
